change log

### 29.10.2017
- added splitting into greater and lesser greensfunctions

### 16.10.2017
- dft omits last point if number of datapoints is even

### 13.10.2017
- extended time_format by showing hours >= 100 and above 999h to show days automatically

### 12.10.2017
- added linebreak in progress.log after time evolution
- changed plotting to recognize what data is created (basically added if clause for reduced ent and occ)
- fixed dft frequencies to be correctly calculated
- fixed dft of greens function to get the correct sample spacing
- NOTE: DFT can only handle uneven numbers of datapoints, fix this!

### 10.10.2017
- fixed eta for green's function
- changed updateAll to be outside the if clause for storeData
- added config parameter for reduced entropy and occupation number

### 05.10.2017
- fixed bug where reduced density matrix was not initialized correctly for only one traced out level
- fixed bug where progress output for greens functions with more than 999 datapoints was broken

### 04.10.2017
- changed time output in progress display to dynamically choose the best format

### 28.09.2017
- changed character code for mu in time_format to actually print out a mu
- fixed bug in progress print for evaluate_green

### 27.09.2017
- changed getQuartic like functions to multiplication with dot instead of asterisk
- changed occupation numbers to be also calculated when reducing from state (this was a feature previously)
- added more information to progress.log and included print commands in respective methods
- huge cleanup with PyCharm - basically initialized every variable and made everything explicit
- added green-function progress output to stdout and progress.log
- added methods for progress file opening and closing
- a metric shit ton of cosmetics
- added function time_format for int(seconds) to str(sensible)

### 26.09.2017
- added optimizations for only one level left
- added optimizations for only two levels overall