@@ -43,6 +43,7 @@ reducedentropy = True
 totalenergy = True
 reducedenergy = False
 occupations = True
+entanglementspectrum = True
 
 [plotbools]
 data = True
